# theHive

./: CMakeLists.txt  README.md  example.json  hiveServer.py  shorthand.txt
src/: action.hpp  main.cpp
src/bots/: basicBot.cpp  basicBot.hpp  bot.hpp  teamLead.cpp  teamLead.hpp
src/fireteam/: fireteam.cpp  fireteam.hpp
src/hive/: hive.cpp  hive.hpp
